fix(MarkdownEditor): add padding to prevent border overlap by child elements

--- a/packages/ui/src/Markdown/styles/editor.css
+++ b/packages/ui/src/Markdown/styles/editor.css
@@ -2,6 +2,7 @@
   background-color: var(--bgColor-inset);
   display: inline-block;
   width: 100%;
+  padding: 1px;
   border-width: 1px;
   border-style: solid;
   border-radius: 6px;
@@ -46,6 +47,7 @@
   z-index: 10;
   border: none;
   height: 100vh !important;
+  padding: 0;
 }
 
 .bytemd-fullscreen.bytemd:focus-within {
